<resources>
    <!-- String auxiliares -->
    <string name="app_name">heliTOPtero</string>
    <string name="zero">-</string>
    <string name="unidades_text">unidades</string>
    <string name="buscas_string">buscar</string>
    <string name="cancelar_string">cancelar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_nome">Nome</string>
    <string name="prompt_last_name">Sobrenome</string>
    <string name="prompt_nascimento">Data de nascimento</string>
    <string name="prompt_endereco">Rua/Avenida, nº, Complemento, Bairro</string>
    <string name="prompt_localizacao">CEP, Cidade-Estado</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_confirm">Confirme a senha</string>
    <string name="prompt_">Email</string>
    <string name="action_register">Registrar</string>
    <string name="action_already_account">Já possui uma conta? Faça o login</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_up">Não tem uma conta? Registre-se!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_name">Coloque o nome</string>
    <string name="error_invalid_last_name">Coloque o sobrenome</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">Senha inválida</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_password_match">Senhas não são iguais</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="error_email_exists">Email já existe</string>
    <string name="error_valid_email_password">Email ou senha incorretos</string>
    <string name="success_message">Registro feito com sucesso!</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Stings related to menu -->
    <string name="cadastro_string">Cadastro</string>
    <string name="perfil_string">Perfil</string>
    <string name="realizar_venda_string">Realizar Venda</string>
    <string name="realizar_compra_string">Realizar Compra</string>
    <string name="busca_inventario_string">Buscar no Inventário</string>
    <string name="inserir_inventario_string">Inserir Item no Inventário</string>
    <string name="relat_vendas_string">Relatório de Vendas</string>

    <!-- Strings Perfil -->
    <string name="nome_string">Nome</string>
    <string name="sobrenome_string">Sobrenome</string>
    <string name="nascimento_string">00/00/0000</string>
    <string name="endereco_string">Rua Nova nº 1 - Centro</string>
    <string name="localizacao_string">00000–000 - São Paulo-SP</string>
    <string name="cargo_string">Gerente</string>
    <string name="email_string">gerente@helitoptero.com</string>

    <!-- Strings Inserir item -->
    <string name="item_nome">Nome do produto</string>
    <string name="item_fabricante">Fabricante</string>
    <string name="item_capacidade">Capacidade de pessoas</string>
    <string name="item_compra">Preço de compra</string>
    <string name="item_venda">Preço de venda</string>
    <string name="item_velocidade">Velocidade</string>
    <string name="item_aceleração">Aceleração</string>
    <string name="item_frenagem">Frenagem</string>
    <string name="item_controle">Controle</string>
    <string name="item_media">Média geral</string>
    <string name="item_estoque">Estoque</string>

    <!-- Strings venda -->
    <string name="cliente_string">Cliente</string>
    <string name="quantidade_string">Quantidade</string>
    <string name="selecione_string">Selecione</string>
    <string name="realizando_compra_string">Realizando a compra de:</string>
    <string name="realizando_venda_string">Realizando a venda de:</string>
    <string name="preco_sugerido_string">P. sugerido</string>

    <!-- String vizualização dos helinhos -->
    <string name="preco_venda_valor">0</string>

    <string name="nome_fabricante_digitar">Digite o nome ou o fabricante</string>

    <!-- mensagens -->
    <string name="ok_string">OK</string>
    <string name="erro_titulo">ERRO</string>
    <string name="estoque_vazio_string">Unidade não pode ser vendida, não há estoque.</string>
    <string name="heli_n_encontrado_string">Helicoptero não encontrado, tente novamente.</string>
    <string name="heli_existente_string">Helicoptero já registrado.</string>
    <string name="parametros_incorretos_string">Parâmetros incorretos.</string>

    <!-- contentDescription -->
    <string name="logo_description">Logo</string>
    <string name="foto_perfil_description">Foto do perfil</string>
    <string name="foto_helinho_description">Foto do helicoptero</string>
    <string name="moneyy">$</string>
    <string name="botao_description">botao</string>
    <string name="buscar_cliente_string">Buscar Cliente</string>
    <string name="acicionar_cliente_string">Acicionar Cliente</string>
    <string name="escolha_o_cliente_string">Escolha o cliente</string>
    <string name="enderecoo_string">Endereço</string>
    <string name="cpf_cnpj_string">CPF/CNPJ</string>
    <string name="telefone_string">Telefone</string>
    <string name="cliente_existente_string">Cliente já registrado</string>
    <string name="vendedor_string">Vendedor</string>
    <string name="data_string">Data</string>
    <string name="preco_string">Preço</string>
    <string name="valor_total_string">Valor total</string>
    <string name="venda">Venda</string>
    <string name="compra">Compra</string>
    <string name="selecine_transacao_string">Seleione a compra ou venda para mais informações</string>
    <string name="editar">Editar</string>

</resources>
