...
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/bordinha"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inicio_container1">

    <ImageView
        android:id="@+id/logo_inicio"
        android:contentDescription="@string/logo_description"
        android:layout_width="0dp"
        android:layout_height="match_parent"
...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:id="@+id/bot_perf_inicio"
            android:text="@string/perfil_string"
            android:layout_margin="10dp"
            android:background="@drawable/botoes"
            android:textColor="@color/branco"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
...
